--- a/index.html
+++ b/index.html
@@ -369,30 +369,32 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address>
-          <ul class="address-list list">
-            <li class="address-item">
-              <a href="" class="link address-contact map"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="address-item">
-              <a href="mailto:info@example.com" class="link address-contact"
-                >info@example.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a href="tel:+380991111111" class="link address-contact"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-        <div class="wrap">
+      <div class="container wrap">
+        <div class="footer-left">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address>
+            <ul class="address-list list">
+              <li class="address-item">
+                <a href="" class="link address-contact map"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="mailto:info@example.com" class="link address-contact"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="tel:+380991111111" class="link address-contact"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-right">
           <h2 class="visually-hidden">Соцсети</h2>
           <h3 class="title">Присоединяйтесь</h3>
           <ul class="team-social social-list list">
