--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,11 @@
             >Web<span class="logoblack">Studio</span></a
           >
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
@@ -40,14 +42,14 @@
         <ul class="site-nav-contacts list">
           <li class="item">
             <a href="" class="link"
-              ><svg class="mail">
+              ><svg class="link-item">
                 <use href="./images/sprite.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a href="" class="link"
-              ><svg class="smartphone">
+              ><svg class="link-item">
                 <use href="./images/sprite.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -206,30 +208,63 @@
         </div>
       </section>
     </main>
+    <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address>
-          <ul class="address-list list">
-            <li class="address-item">
-              <a href="" class="link address-contact map"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container wrap">
+        <div class="footer-left">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address>
+            <ul class="address-list list">
+              <li class="address-item">
+                <a href="" class="link address-contact map"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="mailto:info@example.com" class="link address-contact"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="tel:+380991111111" class="link address-contact"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-right">
+          <h2 class="visually-hidden">Соцсети</h2>
+          <h3 class="title">Присоединяйтесь</h3>
+          <ul class="team-social social-list list">
+            <li class="item">
+              <a href="" class="social-link"
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="address-item">
-              <a href="mailto:info@example.com" class="link address-contact"
-                >info@example.com</a
-              >
+            <li class="item">
+              <a href="" class="social-link"
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="address-item">
-              <a href="tel:+380991111111" class="link address-contact"
-                >+38 099 111 11 11</a
-              >
+            <li class="item">
+              <a href="" class="social-link"
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="social-link"
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
